# study_planner

./: .gitignore  pyproject.toml  requirements.txt
study_planner/planner/: admin.py  forms.py  models.py  utils.py  views.py
study_planner/study_planner/: settings.py  urls.py
study_planner/templates/: base.html  index.html
study_planner/templates/auth/: login.html  register.html
study_planner/templates/planner/: calendar.html  dashboard.html  plan_detail.html  quiz_results.html  resources.html
