[project]
name = "study-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-tailwind==0.5.0",
    "django>=6.0.5",
    "django-crispy-forms==2.1",
    "django-widget-tweaks==1.5.0",
    "pillow==10.1.0",
    "python-dateutil==2.8.2",
    "python-decouple==3.8",
    "requests==2.31.0",
]
